[package]
name = "bob-rov"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
bno055 = { version = "0.4.0", features = ["std"], optional = true }
embedded-hal = { version = "1.0.0", optional = true }
rp2040-dshot = "0.0.5"
rpi-pal = { version = "0.22.2", features = ["hal"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
incremental = true

[profile.dev]
opt-level = 0
lto = false
codegen-units = 512
incremental = true

[features]
default = ["imu"]
i2c = []
imu = ["bno055", "i2c", "embedded-hal"]
imu-force-recalib = ["imu"]
