[package]
name = "bob-rov"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
# this goober didn't publish the version which is updated to embedded-hal 1.0.0 to crates.io
aht20 = { git = "https://github.com/fmckeogh/aht20", branch = "master", optional = true} 
bno055 = { version = "0.4.0", features = ["std"], optional = true }
console-subscriber = { version = "0.5.0", optional = true }
embedded-hal-bus = { version = "0.3.0", optional = true }


rp2040-dshot = "0.0.7"
rpi-pal = { version = "0.22.2", features = ["hal"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "tracing"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["parking_lot", "env-filter"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
incremental = true

[profile.dev]
opt-level = 0
lto = false
codegen-units = 512
incremental = true

[features]
default = ["aht20", "imu", "tokio-console"]
tokio-console = ["dep:console-subscriber"]
spi = []
i2c = ["dep:embedded-hal-bus"]
imu = ["dep:bno055", "i2c"]
imu-force-recalib = ["imu"]
aht20 = ["dep:aht20", "i2c"]
